--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: arial;
 }
 
 body {
@@ -60,6 +61,13 @@ body {
 input[type="text"]
 {
     font-size: 1rem;
+}
+
+.info {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 5px;
 }
 
 
