--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
 }
 
 .button {
+    font-size: 1rem;
     margin: 1rem;
     width: 50%;
     height: 3rem;
@@ -40,6 +41,7 @@ body {
 }
 
 .buttonNext {
+    font-size: 1rem;
     margin: 1rem;
     width: 50%;
     height: 3rem;
